# avito-ads-parser

./: .env.example  .gitignore  .python-version  README.md  TZ.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: output.csv  site1.html  site2.html
src/: __init__.py  analyzer.py  enricher.py  parser.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_enricher.py  test_parser.py
