[project]
name = "avito-ads-parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "pandas-stubs>=2.3.3.260113",
    "ruff>=0.14.13",
    "vulture>=2.14",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
    "FA",     # flake8-future-annotations
    "PYI",    # flake8-pyi
    "PLC",    # pylint convention
    "PLE",    # pylint errors
    "PLW",    # pylint warnings
    "PLR",    # pylint refactor
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",    # assert allowed in tests
    "PLR2004", # magic values allowed in tests
    "RUF001",  # Cyrillic characters allowed in test data
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool_basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
pythonVersion = "3.14"


[project.scripts]
# Development commands
lint = "uv run ruff check ."
format = "uv run ruff format ."
typecheck = "uv run basedpyright src/"
check = "uv run ruff check . && uv run basedpyright src/ && uv run vulture src/ --min-confidence 80"
test = "uv run pytest tests/ -v"
test-cov = "uv run pytest tests/ --cov=src --cov-report=term-missing"
